# Projeto-ML

./: README.md  app.py  pyproject.toml
