[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = ["Lucas Gomes <lucasgomes.lg57@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
streamlit = "^1.43.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
